feat: Add option for custom backend
